fix(testing): reduce code smells